// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectDropdown > should render disabled option base 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-34-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-34-input"
            id="downshift-34-label"
          />
          <div
            class="css-13c7w0w"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-34-menu"
                aria-labelledby="downshift-34-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1vs1awz"
                data-testid="SelectDropdown__input"
                disabled=""
                id="downshift-34-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-34-label"
          id="downshift-34-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render disabled option group 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-36-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-36-input"
            id="downshift-36-label"
          />
          <div
            class="css-13c7w0w"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-36-menu"
                aria-labelledby="downshift-36-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1vs1awz"
                data-testid="SelectDropdown__input"
                disabled=""
                id="downshift-36-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-36-label"
          id="downshift-36-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render invalid option base 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-1hr3i2s"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-30-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-30-input"
            id="downshift-30-label"
          />
          <div
            class="css-1hr3i2s"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-30-menu"
                aria-invalid="true"
                aria-labelledby="downshift-30-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-30-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              data-testid="Input__addon-end"
            >
              <span
                data-testid="Input__error"
              >
                <div
                  class="text-theme-danger-500 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </span>
              <div
                class="pl-3"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-danger-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-30-label"
          id="downshift-30-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render invalid option group 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-1hr3i2s"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-32-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-32-input"
            id="downshift-32-label"
          />
          <div
            class="css-1hr3i2s"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-32-menu"
                aria-invalid="true"
                aria-labelledby="downshift-32-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-32-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              data-testid="Input__addon-end"
            >
              <span
                data-testid="Input__error"
              >
                <div
                  class="text-theme-danger-500 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </span>
              <div
                class="pl-3"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-danger-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-32-label"
          id="downshift-32-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-0-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-0-input"
            id="downshift-0-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-0-menu"
                aria-labelledby="downshift-0-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-0-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-0-label"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with custom label 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="absolute z-10 w-full"
    >
      <ul
        class="css-16mnyn9"
      >
        <li
          aria-selected="false"
          class="select-list-option"
          data-testid="SelectDropdown__option--0"
          id="downshift-6-item-0"
          role="option"
        >
          <div
            class="select-list-option__label"
          >
            <span>
              Label Option 1
            </span>
          </div>
        </li>
        <li
          aria-selected="false"
          class="select-list-option"
          data-testid="SelectDropdown__option--1"
          id="downshift-6-item-1"
          role="option"
        >
          <div
            class="select-list-option__label"
          >
            <span>
              Label Option 2
            </span>
          </div>
        </li>
        <li
          aria-selected="false"
          class="select-list-option"
          data-testid="SelectDropdown__option--2"
          id="downshift-6-item-2"
          role="option"
        >
          <div
            class="select-list-option__label"
          >
            <span>
              Label Option 3
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-6-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-6-input"
            id="downshift-6-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Opt
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-6-menu"
                aria-labelledby="downshift-6-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-6-input"
                placeholder="Select option"
                type="text"
                value="Opt"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Option 1
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 rotate-180 transform css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-6-label"
          id="downshift-6-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with custom label and allowed overflow 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="absolute z-10 w-full"
    >
      <ul
        class="css-16mnyn9"
      >
        <li
          aria-selected="false"
          class="select-list-option"
          data-testid="SelectDropdown__option--0"
          id="downshift-18-item-0"
          role="option"
        >
          <div
            class="select-list-option__label"
          >
            <span>
              Label Option 1
            </span>
          </div>
        </li>
        <li
          aria-selected="false"
          class="select-list-option"
          data-testid="SelectDropdown__option--1"
          id="downshift-18-item-1"
          role="option"
        >
          <div
            class="select-list-option__label"
          >
            <span>
              Label Option 2
            </span>
          </div>
        </li>
        <li
          aria-selected="false"
          class="select-list-option"
          data-testid="SelectDropdown__option--2"
          id="downshift-18-item-2"
          role="option"
        >
          <div
            class="select-list-option__label"
          >
            <span>
              Label Option 3
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-18-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-18-input"
            id="downshift-18-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Opt
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-18-menu"
                aria-labelledby="downshift-18-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-18-input"
                placeholder="Select option"
                type="text"
                value="Opt"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Option 1
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 rotate-180 transform css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-18-label"
          id="downshift-18-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-405-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-405-input"
            id="downshift-405-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-405-menu"
                aria-labelledby="downshift-405-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-405-input"
                placeholder="Select option"
                type="text"
                value="3"
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-405-label"
          id="downshift-405-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-54-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-54-input"
            id="downshift-54-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Option 3
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-54-menu"
                aria-labelledby="downshift-54-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-54-input"
                placeholder="Select option"
                type="text"
                value="Option 3"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Option 3
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-54-label"
          id="downshift-54-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-60-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-60-input"
            id="downshift-60-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-60-menu"
                aria-labelledby="downshift-60-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-60-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-60-label"
          id="downshift-60-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base without caret 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-38-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-38-input"
            id="downshift-38-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-38-menu"
                aria-labelledby="downshift-38-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-38-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-38-label"
          id="downshift-38-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-2-input"
            id="downshift-2-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-2-menu"
                aria-labelledby="downshift-2-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-2-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-2-label"
          id="downshift-2-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with custom label 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="absolute z-10 w-full"
    >
      <ul
        class="css-16mnyn9"
      >
        <ul
          class="select-list-option-group"
          data-testid="SelectDropdown__option-group--0"
        >
          <li
            class="select-list-option-head"
          >
            <div
              class="select-list-option-head__label"
            >
              Group1
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--0"
            id="downshift-12-item-0"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 1
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--1"
            id="downshift-12-item-1"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 2
              </span>
            </div>
          </li>
        </ul>
      </ul>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-12-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-12-input"
            id="downshift-12-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Opt
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-12-menu"
                aria-labelledby="downshift-12-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-12-input"
                placeholder="Select option"
                type="text"
                value="Opt"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Option 1
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 rotate-180 transform css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-12-label"
          id="downshift-12-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with custom label and allowed overflow 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="absolute z-10 w-full"
    >
      <ul
        class="css-16mnyn9"
      >
        <ul
          class="select-list-option-group"
          data-testid="SelectDropdown__option-group--0"
        >
          <li
            class="select-list-option-head"
          >
            <div
              class="select-list-option-head__label"
            >
              Group1
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--0"
            id="downshift-24-item-0"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 1
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--1"
            id="downshift-24-item-1"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 2
              </span>
            </div>
          </li>
        </ul>
      </ul>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-24-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-24-input"
            id="downshift-24-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Opt
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-24-menu"
                aria-labelledby="downshift-24-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-24-input"
                placeholder="Select option"
                type="text"
                value="Opt"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Option 1
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 rotate-180 transform css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-24-label"
          id="downshift-24-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-408-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-408-input"
            id="downshift-408-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-408-menu"
                aria-labelledby="downshift-408-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-408-input"
                placeholder="Select option"
                type="text"
                value="3"
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-408-label"
          id="downshift-408-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-57-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-57-input"
            id="downshift-57-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Item 1
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-57-menu"
                aria-labelledby="downshift-57-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-57-input"
                placeholder="Select option"
                type="text"
                value="Item 1"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Item 1
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-57-label"
          id="downshift-57-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-62-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-62-input"
            id="downshift-62-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-62-menu"
                aria-labelledby="downshift-62-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-62-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-62-label"
          id="downshift-62-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group without caret 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-40-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-40-input"
            id="downshift-40-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-40-menu"
                aria-labelledby="downshift-40-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-40-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-40-label"
          id="downshift-40-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render while allowing horizontal overflow 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-68-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-68-input"
            id="downshift-68-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-68-menu"
                aria-labelledby="downshift-68-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-68-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-68-label"
          id="downshift-68-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render with custom wrapper class name 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-4-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-4-input"
            id="downshift-4-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-4-menu"
                aria-labelledby="downshift-4-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-4-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-4-label"
          id="downshift-4-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-64-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-64-input"
            id="downshift-64-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-64-menu"
                aria-labelledby="downshift-64-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-64-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-64-label"
          id="downshift-64-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-66-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-66-input"
            id="downshift-66-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-66-menu"
                aria-labelledby="downshift-66-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-66-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-66-label"
          id="downshift-66-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
